--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,12 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - type: bind
+        source: /etc/letsencrypt/archive/web.vicolby.space
+        target: /etc/nginx/certs
+        read_only: true
+        bind:
+          propagation: rslave
     depends_on:
       - app
     networks:
