--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name web.vicolby.space;
-    
+
     # Redirect HTTP to HTTPS
     return 301 https://$server_name$request_uri;
 }
@@ -12,8 +12,8 @@ server {
     server_name web.vicolby.space;
 
     # SSL certificates
-    ssl_certificate /etc/letsencrypt/live/web.vicolby.space/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/web.vicolby.space/privkey.pem;
+    ssl_certificate /etc/nginx/certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
     # SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
