--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - type: bind
-        source: /etc/letsencrypt/live/web.vicolby.space
-        target: /etc/nginx/certs
+        source: /etc/letsencrypt
+        target: /etc/letsencrypt
         read_only: true
         bind:
           propagation: rslave
