--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -14,7 +14,7 @@ server {
 server {
     listen 443 default_server ssl http2;
     listen [::]:443 ssl http2;
-    server_name sample.ecostack.dev;
+    server_name web.vicolby.space;
     ssl_certificate /etc/letsencrypt/live/web.vicolby.space/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/web.vicolby.space/privkey.pem;
     location / {
